--- a/lab/cloudChronicles_Lab001_Disaster_Recovery_Detective.ipynb
+++ b/lab/cloudChronicles_Lab001_Disaster_Recovery_Detective.ipynb
@@ -32,7 +32,47 @@
     "## 🔍 STAR Method Lab Prompt\n",
     "\n",
     "**Situation:**  \n",
-    "[Define your scenario here.]\n",
+    "[Here's a STAR-based disaster recovery plan for a Google Cloud regional outage in us-central1, leveraging Cloud SQL replicas, multi-region Cloud Storage, and Pub/Sub alerts for failover and recovery.
+
+Situation
+A regional outage has impacted Google Cloud's us-central1 region, causing downtime for databases, storage, and messaging services hosted there.
+
+Task
+Develop a disaster recovery plan to failover workloads to another region and restore operations efficiently using Google Cloud's native tools.
+
+Action
+1. Database Recovery: Cloud SQL Replicas
+Pre-outage setup: Deploy read replicas in a different region (us-east1 or us-west1).
+
+Failover process:
+
+Promote the read replica to a primary instance in the backup region.
+
+Update application configurations or Cloud DNS records to point to the new primary database.
+
+Restore any missing data from Cloud SQL automated backups.
+
+2. Object Storage Recovery: Multi-Region Cloud Storage
+Pre-outage setup: Store critical assets like logs and backups in multi-region buckets (e.g., nam4 for North America).
+
+Failover process:
+
+Redirect application configurations to the multi-region Cloud Storage bucket.
+
+Deploy standby workloads in an unaffected region (us-west1 or us-east1).
+
+Utilize Cloud Storage Transfer Service to sync any new data.
+
+3. Messaging and Alerting: Pub/Sub Alerts
+Pre-outage setup: Implement cross-region Pub/Sub topics for event-driven processing.
+
+Failover process:
+
+Configure Cloud Functions or Cloud Run in another region to process Pub/Sub messages.
+
+Notify teams via Cloud Monitoring alerts when the primary region goes down.
+
+Apply IAM policies to ensure services can read messages from backup regions.]\n",
     "\n",
     "**Task:**  \n",
     "[Define what the user is expected to solve.]\n",
